core/testing/error_snapshots/validation/return_outside_function.snap
return 5
### EXPECTED ###
error[RAD40004]: 'return' can only be used inside a function
  --> <script>:1:1
  |
1 | return 5
  | ^^^^^^^^
  |
   = info: rad explain RAD40004

